                       User-Visible DocKnot Changes

DocKnot 3.05 (unreleased)

    Change the heuristic for when to refrain from wrapping output
    paragraphs to require they start with three short lines rather than
    two, ignore the indentation, and increase the threshold for a short
    line to 45 characters from 40.

    Depend on JSON::MaybeXS instead of JSON.

    Update to rra-c-util 8.3:

    * Fix style issues caught by Perl::Critic::Freenode.
    * Ignore debian/changelog when checking for obsolete strings.

DocKnot 3.04 (2020-05-16)

    Change the vcs.travis metadata key to vcs.status.travis.  This will
    require changes to all templates and package metadata.json files that
    use this key.

    Add support for generating a build status badge from a GitHub Actions
    workflow.  To do this, set vcs.status.workflow to the name of the
    workflow that should be referenced for the badge.

    Also specify DocKnot's dependencies with a cpanfile.  This makes it
    easier to install its dependencies with some tools, such as cpm.

DocKnot 3.03 (2020-01-19)

    For CPAN packages pushed to GitHub, add a Shields.io license badge to
    the Markdown README file.

    For packages with a Debian package, add a Shields.io badge for the
    version in Debian.

    docknot dist now uses IO::Uncompress::Gunzip and IO::Compress::Xz to
    generate a missing xz tarball rather than running external gzip and xz
    programs, which avoids test failures when those programs aren't
    available or don't support the expected options.  Thanks to Slaven
    Rezić for the testing and report.  (#131406)

    docknot dist now supports a distribution/ignore metadata setting,
    which contains a list of regular expressions of files to ignore when
    checking a distribution tarball for completeness.

    Stop leaking exceptions via $@ to the caller of App::DocKnot::Config.
    Configuration parsing catches and ignores a variety of errors, which