@@ -69,7 +69,7 @@ my $build = Module::Build->new(
         'IPC::Run'            => 0,
         'IPC::System::Simple' => 0,
         'JSON::MaybeXS'       => 0,
-        'List::MoreUtils'     => 0,
+        'List::SomeUtils'     => 0,
         'Perl6::Slurp'        => 0,
         'Template'            => 0,
         perl                  => '5.024',
