@@ -59,7 +59,7 @@ REQUIREMENTS
   * IPC::Run
   * IPC::System::Simple
   * JSON::MaybeXS
-  * List::MoreUtils
+  * List::SomeUtils
   * Perl6::Slurp
   * Template (part of Template Toolkit)
 
