@@ -102,7 +102,7 @@ The following additional Perl modules are required to use it:
 \bullet(packed)[IPC::Run]
 \bullet(packed)[IPC::System::Simple]
 \bullet(packed)[JSON::MaybeXS]
-\bullet(packed)[List::MoreUtils]
+\bullet(packed)[List::SomeUtils]
 \bullet(packed)[Perl6::Slurp]
 \bullet(packed)[Template (part of Template Toolkit)]
 
