@@ -7,7 +7,8 @@ DocKnot 3.05 (unreleased)
     two, ignore the indentation, and increase the threshold for a short
     line to 45 characters from 40.
 
-    Depend on JSON::MaybeXS instead of JSON.
+    Depend on JSON::MaybeXS instead of JSON, and List::SomeUtils instead
+    of List::MoreUtils.
 
     Update to rra-c-util 8.3:
 
